dsa-TBD/config/kubernetes/microservices/iot-api/deployment.yml
# IoT Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-app
  labels:
    io.iot.service: iot-app
spec:
  replicas: 5
  selector:
    matchLabels:
      io.iot.service: iot-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.iot.network/app-network: "true"
        io.iot.service: iot-app
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: vultr-cr-credentials
  
      containers:
      - name: gin-app
        # Adjust image as needed
        image: ewr.vultrcr.com/gendoc/uspresearch24:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

        # Non-sensitive environment variables
        resources: {}

      restartPolicy: Always
