dsa-TBD/config/kubernetes/microservices/iot-api/service.yml
# IoT Application Service
apiVersion: v1
kind: Service
metadata:
  name: iot-app
  labels:
    io.iot.service: iot-app
spec:
  # type: LoadBalancer
  ports:
    - name: "iot-app-service"
      port: 8080
      targetPort: 8080
  selector:
    io.iot.service: iot-app
