dsa-TBD/config/kubernetes/microservices/iot-api/ingress.yml
# IoT Application Ingress
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/#load-balance 
# https://github.com/kubernetes/ingress-nginx/tree/main/rootfs/etc/nginx/lua/balancer

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-app-ingress
  namespace: usp-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
    # Load balancing
    # Available options: chash, chashsubset, ewma, resty, round_robin, sticky, sticky_balanced, sticky_persistent
    # nginx.ingress.kubernetes.io/load-balance: "round_robin"
    
    
spec:
  ingressClassName: nginx
  rules:
    - host: iot-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iot-app
                port:
                  number: 8080
